service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-assessment
  labels:
    app: technical-assessment
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
