network-policy-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: technical-assessment-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: technical-assessment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/24
    - ports:
        - protocol: TCP
          port: 80
